make class Person separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 SET(CMAKE_CXX_FLAGS -std=c++11)
 project(test)
-include_directories(include/)
+include_directories(includes/)
 file(GLOB SOURCES "src/*.cpp")
 add_executable(test1 ${SOURCES})
-
-
